--- a/home.html
+++ b/home.html
@@ -10,12 +10,12 @@
   </head>
   <body>
     <div>
-      <div class="h-16 md:h-20 flex">
+      <div class="h-16 md:h-20 flex px-6">
         <!-- logo -->
         <div class="h-20 w-20 md:h-24 md:w-24">
           <div class="p-3">
             <svg
-              viewBox="0 0 100 100"
+              viewBox="0 0 80 80"
               class="block"
               xmlns="http://www.w3.org/2000/svg"
             >
@@ -124,10 +124,10 @@
               >
 
               <hr />
-              <div class="flex md:right-0 md:absolute">
+              <div class="flex md:right-0 md:absolute py-2">
                 <a
                   href="#"
-                  class="text-sm md:flex mx-4 pt-1 hidden hover:text-green-600"
+                  class="text-sm md:flex mx-4 hidden hover:text-green-600"
                 >
                   <svg
                     viewBox="0 0 24 24"
@@ -226,7 +226,7 @@
           md:h-4/5
         "
       >
-        <div class="text-center md:text-left py-16 px-6">
+        <div class="text-center md:text-left py-16 px-6 md:px-14">
           <h1 class="text-xl font-bold md:text-4xl">
             FREE COFFEE<br />
             IS A TAP AWAY
@@ -683,125 +683,137 @@
           </div>
         </div>
       </div>
-      <div class="bg-gray-100 pt-12 px-3">
+      <div class="bg-gray-100 pt-12 px-3 md:px-10 md:pb-10">
         <p class="text-xs">At participating stores. Restrictions apply.</p>
-        <h6 class="font-semibold text-gray-400 pt-6">EARNING STARS</h6>
-        <p class="text-xs pt-3">
-          Stars cannot be earned on purchases of alcohol, Starbucks Cards or
-          Starbucks Card reloads
-        </p>
-        <p class="text-xs pt-3">
-          Earn 1 Star per $1 spent when you scan your member barcode in the app,
-          then pay with cash, credit/debit cards or mobile wallets at
-          participating stores. You can also earn 1 Star per $1 spent when you
-          link a payment method and pay directly through the app.
-        </p>
-        <p class="text-xs pt-3">
-          Earn 2 Stars per $1 spent when you load funds and pay with your
-          digital Starbucks Card in the app. You can also earn 2 Stars per $1
-          spent when you pay in-person at a participating store with your
-          registered physical Starbucks Card or scan your member barcode in the
-          app, and then use any physical Starbucks Card (regardless of whether
-          it is registered) to complete the purchase.
-        </p>
-        <h6 class="font-semibold text-gray-500 pt-6">TERMS OF USE</h6>
-        <p class="text-xs pt-3">For full program details visit</p>
-        <p>
-          <a
-            class="text-green-600 underline hover:no-underline text-xs"
-            href="#"
-            >starbucks.com/rewards/terms.</a
-          >
-        </p>
-        <p class="text-xs pt-3">
-          * Earn 1 Star per $1 when digitally loading your Starbucks Card with
-          your Starbucks® Rewards Visa® Card: See your Card Rewards Program
-          Agreement for more details.
-        </p>
-        <p class="text-xs pt-3">
-          Starbucks® Rewards benefits are available at participating Starbucks
-          stores. Not all stores have the ability to honor Rewards at this time.
-          Visit the
-          <a
-            class="text-green-600 underline hover:no-underline text-xs"
-            href="#"
-            >Starbucks Store Locator</a
-          >
+        <div class="md:flex-col">
+          <div class="md:flex md:flex-row">
+            <div class="md:flex-col md:flex-1">
+              <h6 class="font-semibold text-gray-400 pt-6">EARNING STARS</h6>
+              <p class="text-xs pt-3">
+                Stars cannot be earned on purchases of alcohol, Starbucks Cards
+                or Starbucks Card reloads
+              </p>
+              <p class="text-xs pt-3">
+                Earn 1 Star per $1 spent when you scan your member barcode in
+                the app, then pay with cash, credit/debit cards or mobile
+                wallets at participating stores. You can also earn 1 Star per $1
+                spent when you link a payment method and pay directly through
+                the app.
+              </p>
+              <p class="text-xs pt-3">
+                Earn 2 Stars per $1 spent when you load funds and pay with your
+                digital Starbucks Card in the app. You can also earn 2 Stars per
+                $1 spent when you pay in-person at a participating store with
+                your registered physical Starbucks Card or scan your member
+                barcode in the app, and then use any physical Starbucks Card
+                (regardless of whether it is registered) to complete the
+                purchase.
+              </p>
+            </div>
 
-          and search for locations honoring “Redeem Rewards”.
-        </p>
-        <p class="text-xs pt-3">
-          Deposit and credit card products provided by JPMorgan Chase Bank, N.A.
-          Member FDIC
-        </p>
+            <div class="md:flex-col md:flex-1 md:pl-4">
+              <h6 class="font-semibold text-gray-500 pt-6">TERMS OF USE</h6>
+              <p class="text-xs pt-3">For full program details visit</p>
+              <p>
+                <a
+                  class="text-green-600 underline hover:no-underline text-xs"
+                  href="#"
+                  >starbucks.com/rewards/terms.</a
+                >
+              </p>
+              <p class="text-xs pt-3">
+                * Earn 1 Star per $1 when digitally loading your Starbucks Card
+                with your Starbucks® Rewards Visa® Card: See your Card Rewards
+                Program Agreement for more details.
+              </p>
+              <p class="text-xs pt-3">
+                Starbucks® Rewards benefits are available at participating
+                Starbucks stores. Not all stores have the ability to honor
+                Rewards at this time. Visit the
+                <a
+                  class="text-green-600 underline hover:no-underline text-xs"
+                  href="#"
+                  >Starbucks Store Locator</a
+                >
 
-        <h6 class="font-semibold text-gray-500 pt-6">BENEFITS</h6>
-        <p class="text-xs pt-3">
-          Free refills available during same in-store visit only. To qualify for
-          the Birthday Reward, you must have made at least one Star-earning
-          transaction.
-        </p>
-        <h6 class="font-semibold text-gray-500 pt-6">REDEEMING REWARDS</h6>
-        <p class="text-xs pt-3">
-          Rewards cannot be redeemed for alcoholic beverages or multi-serve
-          items. Not all stores honor tiered Rewards. Select stores redeem 150
-          Stars for free food or drink items only.
-        </p>
+                and search for locations honoring “Redeem Rewards”.
+              </p>
+              <p class="text-xs pt-3">
+                Deposit and credit card products provided by JPMorgan Chase
+                Bank, N.A. Member FDIC
+              </p>
+            </div>
+          </div>
+
+          <div class="md:flex md:flex-row">
+            <div class="md:flex-col md:flex-1">
+              <h6 class="font-semibold text-gray-500 pt-6">BENEFITS</h6>
+              <p class="text-xs pt-3">
+                Free refills available during same in-store visit only. To
+                qualify for the Birthday Reward, you must have made at least one
+                Star-earning transaction.
+              </p>
+            </div>
+            <div class="md:flex-col md:flex-1 md:pl-4">
+              <h6 class="font-semibold text-gray-500 pt-6">
+                REDEEMING REWARDS
+              </h6>
+              <p class="text-xs pt-3">
+                Rewards cannot be redeemed for alcoholic beverages or
+                multi-serve items. Not all stores honor tiered Rewards. Select
+                stores redeem 150 Stars for free food or drink items only.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- hr -->
       <div class="max-w-8xl mx-auto h-px bg-gray-300 my-14"></div>
       <footer class="max-w-8xl mx-auto px-8">
-        <div class="flex-col">
-          <div
-            class="
-              flex flex-col
-              lg:ml-4
-              lg:flex-row
-              lg:justify-between
-              lg:items-center
-              w-full
-            "
-          >
+        <div class="flex-col md:flex md:flex-row">
+          <div class="flex flex-col w-full">
             <div class="w-full">
-              <div class="flex justify-between items-center py-2 mb-2">
-                <h3 class="text-md font-normal">About Us</h3>
-                <button
-                  class="
-                    relative
-                    lg:block
-                    focus:outline-none
-                    hover:rounded-full
-                    hover:bg-gray-200
-                  "
-                >
-                  <svg
-                    viewBox="0 0 24 24"
-                    class="valign-middle absoluteCenter"
-                    preserveAspectRatio="xMidYMid meet"
-                    aria-hidden="true"
-                    focusable="false"
-                    style="
-                      width: 32px;
-                      height: 32px;
-                      overflow: visible;
-                      fill: currentcolor;
+              <div>
+                <div class="flex justify-between items-center py-2 mb-2">
+                  <h3 class="text-md font-semibold">About Us</h3>
+                  <button
+                    class="
+                      relative
+                      md:hidden
+                      focus:outline-none
+                      hover:rounded-full
+                      hover:bg-gray-200
                     "
                   >
-                    <path
-                      d="M11.96 15.5c-.206 0-.402-.084-.546-.232l-5.188-5.33c-.3-.31-.3-.81 0-1.12.3-.31.79-.31 1.093 0l4.64 4.767 4.723-4.853c.3-.31.79-.31 1.09 0 .303.31.303.812.002 1.122l-5.27 5.414c-.145.148-.34.232-.546.232"
-                    ></path>
-                    <circle
-                      class="sb-icon-hover"
-                      fill="transparent"
-                      cx="50%"
-                      cy="50%"
-                      r="75%"
-                    ></circle>
-                  </svg>
-                </button>
+                    <svg
+                      viewBox="0 0 24 24"
+                      class="valign-middle absoluteCenter"
+                      preserveAspectRatio="xMidYMid meet"
+                      aria-hidden="true"
+                      focusable="false"
+                      style="
+                        width: 32px;
+                        height: 32px;
+                        overflow: visible;
+                        fill: currentcolor;
+                      "
+                    >
+                      <path
+                        d="M11.96 15.5c-.206 0-.402-.084-.546-.232l-5.188-5.33c-.3-.31-.3-.81 0-1.12.3-.31.79-.31 1.093 0l4.64 4.767 4.723-4.853c.3-.31.79-.31 1.09 0 .303.31.303.812.002 1.122l-5.27 5.414c-.145.148-.34.232-.546.232"
+                      ></path>
+                      <circle
+                        class="sb-icon-hover"
+                        fill="transparent"
+                        cx="50%"
+                        cy="50%"
+                        r="75%"
+                      ></circle>
+                    </svg>
+                  </button>
+                </div>
               </div>
             </div>
-            <div class="flex-col hidden text-sm">
+            <div class="flex-col md:inline hidden text-sm">
               <ul class="inline-block">
                 <li class="">
                   <a
@@ -849,23 +861,14 @@
             </div>
           </div>
           <!-- 2 -->
-          <div
-            class="
-              flex flex-col
-              lg:ml-4
-              lg:flex-row
-              lg:justify-between
-              lg:items-center
-              w-full
-            "
-          >
+          <div class="flex flex-col w-full">
             <div class="w-full">
               <div class="flex justify-between items-center py-2 mb-2">
-                <h3 class="text-md font-normal">Careers</h3>
+                <h3 class="text-md font-semibold">Careers</h3>
                 <button
                   class="
                     relative
-                    lg:block
+                    md:hidden
                     focus:outline-none
                     hover:rounded-full
                     hover:bg-gray-200
@@ -898,7 +901,7 @@
                 </button>
               </div>
             </div>
-            <div class="flex-col hidden text-sm">
+            <div class="flex-col hidden md:inline text-sm">
               <ul class="inline-block">
                 <li class="">
                   <a
@@ -945,23 +948,14 @@
               </ul>
             </div>
           </div>
-          <div
-            class="
-              flex flex-col
-              lg:ml-4
-              lg:flex-row
-              lg:justify-between
-              lg:items-center
-              w-full
-            "
-          >
+          <div class="flex flex-col w-full">
             <div class="w-full">
               <div class="flex justify-between items-center py-2 mb-2">
-                <h3 class="text-md font-normal">Social Impact</h3>
+                <h3 class="text-md font-semibold">Social Impact</h3>
                 <button
                   class="
                     relative
-                    lg:block
+                    md:hidden
                     focus:outline-none
                     hover:rounded-full
                     hover:bg-gray-200
@@ -994,7 +988,7 @@
                 </button>
               </div>
             </div>
-            <div class="flex-col hidden text-sm">
+            <div class="flex-col hidden md:inline text-sm">
               <ul class="inline-block">
                 <li class="">
                   <a
@@ -1041,23 +1035,14 @@
               </ul>
             </div>
           </div>
-          <div
-            class="
-              flex flex-col
-              lg:ml-4
-              lg:flex-row
-              lg:justify-between
-              lg:items-center
-              w-full
-            "
-          >
+          <div class="flex flex-col w-full">
             <div class="w-full">
               <div class="flex justify-between items-center py-2 mb-2">
-                <h3 class="text-md font-normal">For Business Partners</h3>
+                <h3 class="text-md font-semibold">For Business Partners</h3>
                 <button
                   class="
                     relative
-                    lg:block
+                    md:hidden
                     focus:outline-none
                     hover:rounded-full
                     hover:bg-gray-200
@@ -1090,7 +1075,7 @@
                 </button>
               </div>
             </div>
-            <div class="flex-col hidden text-sm">
+            <div class="flex-col hidden md:inline text-sm">
               <ul class="inline-block">
                 <li class="">
                   <a
@@ -1137,23 +1122,14 @@
               </ul>
             </div>
           </div>
-          <div
-            class="
-              flex flex-col
-              lg:ml-4
-              lg:flex-row
-              lg:justify-between
-              lg:items-center
-              w-full
-            "
-          >
+          <div class="flex flex-col lg:ml-4 w-full">
             <div class="w-full">
               <div class="flex justify-between items-center py-2 mb-2">
-                <h3 class="text-md font-normal">Order and Pickup</h3>
+                <h3 class="text-md font-semibold">Order and Pickup</h3>
                 <button
                   class="
                     relative
-                    lg:block
+                    md:hidden
                     focus:outline-none
                     hover:rounded-full
                     hover:bg-gray-200
@@ -1186,7 +1162,7 @@
                 </button>
               </div>
             </div>
-            <div class="flex-col hidden text-sm">
+            <div class="flex-col md:inline hidden text-sm">
               <ul class="inline-block">
                 <li class="">
                   <a
@@ -1385,14 +1361,18 @@
             </svg>
           </a>
         </div>
-        <div class="flex-col text-sm mt-2">
+        <div class="flex-col lg:flex lg:flex-row text-sm mt-2 lg:items-center">
           <p class="py-2"><a href="">Privacy Policy</a></p>
-          <p class="py-2"><a href="">Terms of Use</a></p>
-          <p class="py-2"><a href="">CA Supply Chain Act</a></p>
-          <p class="py-2"><a href="">Submit Your Idea</a></p>
-          <p class="py-2"><a href="">Cookie Preferences</a></p>
+          <span class="text-black px-6 hidden lg:inline">|</span>
+          <p class="py-2 lg:pl-8"><a href="">Terms of Use</a></p>
+          <span class="text-black px-6 hidden lg:inline">|</span>
+          <p class="py-2 lg:pl-8"><a href="">CA Supply Chain Act</a></p>
+          <span class="text-black px-6 hidden lg:inline">|</span>
+          <p class="py-2 lg:pl-8"><a href="">Submit Your Idea</a></p>
+          <span class="text-black px-6 hidden lg:inline">|</span>
+          <p class="py-2 lg:pl-8"><a href="">Cookie Preferences</a></p>
         </div>
-        <p class="text-xs text-gray-500">
+        <p class="text-xs text-gray-500 py-4">
           © 2021 Starbucks Coffee Company. All rights reserved.
         </p>
       </footer>
